Fix alignment of divs

--- a/css/index.css
+++ b/css/index.css
@@ -90,7 +90,6 @@ th {
 
 .box_area {
   margin-left: 10px;
-  padding-left: 5px;
   float: left;
   width: 10%;
   height: 100%;
@@ -206,6 +205,7 @@ html, body {
   width: 100%;
   height: 100%;
   margin-bottom: 2%;
+  margin-left: 6%;
 }
 
 
@@ -214,16 +214,19 @@ html, body {
   height: 100%;
   margin-bottom: 2%;
   margin-top: 6%;
+  margin-left: 6%;
 }
 
 .boxplot3 {
   width: 100%;
   height: 100%;
   margin-top: 6%;
+  margin-left: 6%;
 }
 
 hr {
   border: 1px solid #989898;
   margin-right: 5px;
+  margin-left: 5px;
   opacity: 0.7;
 }
